--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
+# dev dependencies
+node_modules/
+
+
 
