--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "bugs": {
     "url": "https://github.com/benrhodes/move-here-js/issues"
   },
-  "homepage": "https://github.com/benrhodes/move-here-js"
+  "homepage": "https://github.com/benrhodes/move-here-js",
+  "devDependencies": {
+    "gulp": "^3.8.11"
+  }
 }
