--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "browserify": "^9.0.3",
     "gulp": "^3.8.11",
+    "gulp-webserver": "^0.9.0",
     "vinyl-source-stream": "^1.0.0"
   }
 }
