--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "devDependencies": {
     "browserify": "^9.0.3",
     "gulp": "^3.8.11",
+    "gulp-jshint": "^1.10.0",
     "gulp-webserver": "^0.9.0",
+    "jshint-stylish": "^1.0.1",
     "vinyl-source-stream": "^1.0.0"
   }
 }
