--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "devDependencies": {
     "browserify": "^9.0.3",
     "gulp": "^3.8.11",
+    "gulp-clean": "^0.3.1",
+    "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.10.0",
     "gulp-webserver": "^0.9.0",
     "jshint-stylish": "^1.0.1",
