--- a/.jshintrc
+++ b/.jshintrc
@@ -72,7 +72,7 @@
   "jquery"        : false,    // jQuery
   "mocha"         : true,     // Mocha
   "mootools"      : false,    // MooTools
-  "node"          : false,    // Node.js
+  "node"          : true,    // Node.js
   "nonstandard"   : false,    // Widely adopted globals (escape, unescape, etc)
   "prototypejs"   : false,    // Prototype and Scriptaculous
   "qunit"         : false,    // QUnit
