--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
   },
   "homepage": "https://github.com/benrhodes/move-here-js",
   "devDependencies": {
+    "babelify": "^6.0.2",
     "browserify": "^9.0.3",
     "gulp": "^3.8.11",
+    "gulp-babel": "^5.1.0",
     "gulp-clean": "^0.3.1",
     "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.10.0",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-webserver": "^0.9.0",
     "jshint-stylish": "^1.0.1",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^3.3.1"
   }
 }
