--- a/package.json
+++ b/package.json
@@ -25,9 +25,28 @@
     "gulp-jshint": "^1.10.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-webserver": "^0.9.0",
+    "jasmine": "^2.3.2",
+    "jasmine-core": "^2.3.4",
     "jshint-stylish": "^1.0.1",
+    "jspm": "^0.16.0",
+    "karma": "^0.13.9",
+    "karma-babel-preprocessor": "^5.2.1",
+    "karma-jasmine": "^0.3.6",
+    "karma-jspm": "^2.0.1-beta.2",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "phantomjs": "^1.9.18",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^3.3.1"
+  },
+  "jspm": {
+    "directories": {
+      "baseURL": "src"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.8.22",
+      "babel-runtime": "npm:babel-runtime@^5.8.20",
+      "core-js": "npm:core-js@^1.1.0"
+    }
   }
 }
