--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.10.0",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.4.1",
     "gulp-webserver": "^0.9.0",
     "jasmine": "^2.3.2",
     "jasmine-core": "^2.3.4",
