--- a/package.json
+++ b/package.json
@@ -16,38 +16,15 @@
   },
   "homepage": "https://github.com/benrhodes/move-here-js",
   "devDependencies": {
-    "babelify": "^6.0.2",
-    "browserify": "^9.0.3",
-    "gulp": "^3.8.11",
-    "gulp-babel": "^5.1.0",
-    "gulp-clean": "^0.3.1",
-    "gulp-jsdoc": "^0.1.4",
-    "gulp-jshint": "^1.10.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.4.1",
-    "gulp-webserver": "^0.9.0",
-    "jasmine": "^2.3.2",
-    "jasmine-core": "^2.3.4",
-    "jshint-stylish": "^1.0.1",
-    "jspm": "^0.16.0",
-    "karma": "^0.13.9",
-    "karma-babel-preprocessor": "^5.2.1",
-    "karma-jasmine": "^0.3.6",
-    "karma-jspm": "^2.0.1-beta.2",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.18",
+    "babel-preset-es2015-rollup": "^1.1.1",
+    "gulp": "^3.9.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-rollup": "^1.7.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-webserver": "^0.9.1",
+    "rollup-plugin-babel": "^2.4.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
-    "watchify": "^3.3.1"
-  },
-  "jspm": {
-    "directories": {
-      "baseURL": "src"
-    },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.22",
-      "babel-runtime": "npm:babel-runtime@^5.8.20",
-      "core-js": "npm:core-js@^1.1.0"
-    }
+    "vinyl-source-stream": "^1.1.0"
   }
 }
