--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.1",
   "description": "JavaScript to animate things from there to here or here to there.",
   "main": "src/index.js",
+  "module": "dist/move-here.mjs",
   "repository": {
     "type": "git",
     "url": "https://github.com/benrhodes/move-here-js.git"
